private key removal