@@ -1,3 +1,3 @@
 #!/bin/bash
-java -cp target/classes:target/dependency/* com.separ.$@
+java --add-exports java.base/sun.security.jca=ALL-UNNAMED -cp target/classes:target/dependency/* com.separ.$@
 
